# PublicTransportDashboard

./: .gitignore  README(5).md  README.md  app.py  bus_stop_widget.py  database-schema-generator.py  munich_graph.gpickle  munich_stops.pkl  preprocess.py  requirements.txt  vizual.py
api/: Cargo.toml  Rocket.toml  build.rs  build_production.sh  readme.md
api/src/: endpoints.rs  liveupdates.rs  main.rs
static/: script.js  style.css
templates/: index.html
