[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
rustls = "0.23.35"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["rustls-tls", "gzip"] }
dotenvy = "0.15.7"
gtfs-structures = "0.46.1"
rocket_db_pools = {version = "0.2.0", features = ["sqlx_sqlite"]}
serde = { version = "1.0.228", features = ["derive"] }
neo4rs = {version = "0.9.0-rc.9", features = ["json"]}